apps/mlflow/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: mlflow
  labels:
    app: mlflow
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
      name: mlflow
      targetPort: 5000
  selector:
    app: mlflow
