apps/mlflow/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mlflow
  namespace: mlflow
  labels:
    app: docker-mlflow
    chart: docker-mlflow-1.9.1
    release: release-name
    heritage: Tiller
  annotations:
      certmanager.k8s.io/cluster-issuer: "internal"
      kubernetes.io/ingress.class: "nginx-internal"
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
      prometheus.io/probe: "true"
spec:
  rules:
    - host: mlflow.k8s.grigri
      http:
        paths:
          - path: /
            backend:
              serviceName: mlflow
              servicePort: 5000
  tls:
    - hosts:
      - mlflow.k8s.grigri
      secretName: mlflow-tls
